--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 body {
-    margin: 0 ;
     background-color: #141625;
     color: #fff;
     font-family: "Bebas Neue", sans-serif;
     font-size: 16px;
-    line-height: 1.5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    width: 100%;
+    height: auto;
+    overflow-x: hidden;
 }
 
 .container {
     width: 100%;
     max-width: 80rem;
+    margin: 0 auto;
     padding: 0 1rem;
     text-align: center;
+}
+.header img {
+   padding-top: 2rem;
+   padding-bottom: 2rem;
 }
     
 .header img {
@@ -37,20 +39,48 @@ body {
     max-width: 600px; /* или 100% если хочешь адаптив */
     height: auto;
     margin-bottom: 2rem;
+    
+  /* Эффект сияния */
+  filter: drop-shadow(0 0 60px rgba(0, 140, 255, 0.6))
+  drop-shadow(0 0 100px rgba(0, 140, 255, 0.4));
 }
 
 .title {
-    font-size: 2rem;
-    margin: 0.5rem 0;
+    font-size: 5rem;
+    margin-bottom: 20px;
+ 
+}
+
+@media (max-width: 530px) {
+    .title {
+        font-size: 3rem;
+    }
+    
 }
 
 .sub-title {
-    font-size: 1.2rem;
-    color: #aaa;
+    font-size: 1.5rem;
+    color: #919191;
+    margin-bottom: 20px;
+}
+@media (max-width: 530px) {
+    .sub-title {
+        font-size: 1rem;
+    }
+    
 }
 
 .footer {
-    margin-top: 2rem;
-    font-size: 0.8rem;
-    color: #777;
+padding-top: 20px;
+   margin-bottom: 2rem;
+
+}
+.social-links  {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.social-links li a img {
+    max-width: 36px;
 }
